// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/ProjectOverview/ProjectScore render error and refresh data 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-hoverable css-121p60i"
    >
      <div
        class="ant-card-body"
      >
        <header
          class="card-header"
        >
          <div
            class="title"
          >
            <div
              class="title-cont"
            >
              项目评分
            </div>
          </div>
          <div
            class="extra"
          />
        </header>
        <section
          class="card-cont"
        >
          <div
            class="chart-wrapper css-1hgbe7b"
          >
            <div
              class="icon-center-wrapper MuiBox-root css-0"
            >
              <div
                class="ant-empty is-icon-tips css-19kysfv"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    fill="none"
                    height="80"
                    viewBox="0 0 80 80"
                    width="80"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 58.5C8 62.6786 22.3 66 40 66C57.7 66 72 62.6786 72 58.5C72 54.3214 57.7 51 40 51C22.2999 51 8 54.3214 8 58.5Z"
                      fill="#EBEAE7"
                    />
                    <path
                      d="M54.1761 9.19916C53.4239 8.43216 52.3947 8 51.3204 8H21C18.7909 8 17 9.79086 17 12V56C17 58.2091 18.7909 60 21 60H59C61.2091 60 63 58.2091 63 56V19.8302C63 18.7828 62.5892 17.7772 61.8558 17.0294L54.1761 9.19916Z"
                      fill="#F2F1EF"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M16.3501 12.0001C16.3501 9.43197 18.432 7.3501 21.0001 7.3501H51.3204C52.5694 7.3501 53.7658 7.85248 54.6403 8.74413L54.1762 9.19926L54.6403 8.74413L62.3199 16.5744C63.1725 17.4437 63.6501 18.6127 63.6501 19.8303V56.0001C63.6501 58.5682 61.5682 60.6501 59.0001 60.6501H21.0001C18.432 60.6501 16.3501 58.5682 16.3501 56.0001V12.0001ZM21.0001 8.6501C19.1499 8.6501 17.6501 10.1499 17.6501 12.0001V56.0001C17.6501 57.8503 19.1499 59.3501 21.0001 59.3501H59.0001C60.8503 59.3501 62.3501 57.8503 62.3501 56.0001V19.8303C62.3501 18.9531 62.006 18.1109 61.3918 17.4846L53.7121 9.6544C53.0821 9.01203 52.2202 8.6501 51.3204 8.6501H21.0001Z"
                      fill="#E6E4E3"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M52 12.4141C52 11.5232 53.0771 11.077 53.7071 11.707L59.2929 17.2928C59.9229 17.9228 59.4767 18.9999 58.5858 18.9999H53C52.4477 18.9999 52 18.5522 52 17.9999V12.4141Z"
                      fill="white"
                    />
                    <path
                      d="M60 42C55.0345 42 51 46.0345 51 51C51 55.9655 55.0345 60 60 60C64.9655 60 69 55.9655 69 51C69.3103 46.0345 65.2759 42 60 42Z"
                      fill="#F66074"
                    />
                    <path
                      d="M59.9998 45C60.7527 44.9945 61.5 45.6007 61.5 46.1623L61.1277 51.9757C61.1277 52.5374 60.6199 52.9979 59.9998 52.9979C59.3796 52.9979 58.8727 52.5383 58.8727 51.9757L58.5005 46.1623C58.5005 45.6007 59.0918 45.0205 59.9998 45ZM59.9998 56.9973C59.602 56.9973 59.2205 56.8392 58.9393 56.558C58.658 56.2767 58.5 55.8952 58.5 55.4975C58.5 55.0997 58.658 54.7182 58.9393 54.437C59.2205 54.1557 59.602 53.9977 59.9998 53.9977C60.3974 53.9977 60.7788 54.1557 61.0599 54.4368C61.3411 54.718 61.4991 55.0994 61.4991 55.497C61.4991 55.8947 61.3411 56.276 61.0599 56.5572C60.7788 56.8384 60.3974 56.9963 59.9998 56.9963V56.9973Z"
                      fill="white"
                    />
                    <path
                      d="M27 23C27 22.4477 27.4477 22 28 22H39C39.5523 22 40 22.4477 40 23V24C40 24.5523 39.5523 25 39 25H28C27.4477 25 27 24.5523 27 24V23Z"
                      fill="white"
                    />
                    <path
                      d="M27 32C27 31.4477 27.4477 31 28 31H52C52.5523 31 53 31.4477 53 32V33C53 33.5523 52.5523 34 52 34H28C27.4477 34 27 33.5523 27 33V32Z"
                      fill="white"
                    />
                    <path
                      d="M28 40C27.4477 40 27 40.4477 27 41V42C27 42.5523 27.4477 43 28 43H43C43.5523 43 44 42.5523 44 42V41C44 40.4477 43.5523 40 43 40H28Z"
                      fill="white"
                    />
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  <span
                    class="no-data-cont tip-without-title"
                  >
                    error
                  </span>
                </div>
                <div
                  class="ant-empty-footer"
                >
                  <button
                    class="ant-btn ant-btn-text ant-btn-sm basic-button-wrapper css-1uxy5k6"
                    type="button"
                  >
                    <span>
                      刷新
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/ProjectOverview/ProjectScore render order status and click create order 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-hoverable css-121p60i"
    >
      <div
        class="ant-card-body"
      >
        <header
          class="card-header"
        >
          <div
            class="title"
          >
            <div
              class="title-cont"
            >
              项目评分
            </div>
          </div>
          <div
            class="extra"
          />
        </header>
        <section
          class="card-cont"
        >
          <div
            class="chart-wrapper css-1hgbe7b"
          >
            <div
              class="chart-box"
            >
              <section
                class="css-v04253"
              >
                <div
                  class="line-block"
                  hidden=""
                  style="background: none;"
                />
                <div
                  class="line-cont"
                >
                  <div
                    class="line1-main"
                  >
                    100
                    <span
                      class="sub-cont"
                      hidden=""
                    />
                  </div>
                  <div
                    class="line1-main-sub"
                  >
                    最新评分
                    <span
                      class="sub-cont"
                      hidden=""
                    />
                  </div>
                </div>
              </section>
              <section
                style="height: 200px;"
              >
                <div
                  data-custom-params="{"percent":1,"range":{"color":"#4BCCA6","width":20},"autoFit":true,"appendPadding":[10,0,40,0],"radius":0.9,"innerRadius":0.8,"startAngle":15,"endAngle":0.7,"indicator":{"pointer":{"style":{"stroke":"#c3c6cd","lineWidth":3}},"pin":{"style":{"r":6,"fill":"#fcfbf9","lineWidth":3,"stroke":"#c3c6cd"}}},"axis":false,"statistic":{"content":{"offsetY":20,"style":{"height":"28px","lineHeight":28,"fontWeight":300,"fontSize":"13px","color":"#4BCCA6","background":"#4BCCA610","borderRadius":"100px","padding":"0 16px"}}},"theme":"light"}"
                  data-testid="mock-antd-plots"
                />
              </section>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/ProjectOverview/ProjectScore render score between 40-60 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-hoverable css-121p60i"
    >
      <div
        class="ant-card-body"
      >
        <header
          class="card-header"
        >
          <div
            class="title"
          >
            <div
              class="title-cont"
            >
              项目评分
            </div>
          </div>
          <div
            class="extra"
          />
        </header>
        <section
          class="card-cont"
        >
          <div
            class="chart-wrapper css-1hgbe7b"
          >
            <div
              class="chart-box"
            >
              <section
                class="css-v04253"
              >
                <div
                  class="line-block"
                  hidden=""
                  style="background: none;"
                />
                <div
                  class="line-cont"
                >
                  <div
                    class="line1-main"
                  >
                    50
                    <span
                      class="sub-cont"
                      hidden=""
                    />
                  </div>
                  <div
                    class="line1-main-sub"
                  >
                    最新评分
                    <span
                      class="sub-cont"
                      hidden=""
                    />
                  </div>
                </div>
              </section>
              <section
                style="height: 200px;"
              >
                <div
                  data-custom-params="{"percent":0.5,"range":{"color":"#EBAD1C","width":20},"autoFit":true,"appendPadding":[10,0,40,0],"radius":0.9,"innerRadius":0.8,"startAngle":15,"endAngle":0.7,"indicator":{"pointer":{"style":{"stroke":"#c3c6cd","lineWidth":3}},"pin":{"style":{"r":6,"fill":"#fcfbf9","lineWidth":3,"stroke":"#c3c6cd"}}},"axis":false,"statistic":{"content":{"offsetY":20,"style":{"height":"28px","lineHeight":28,"fontWeight":300,"fontSize":"13px","color":"#EBAD1C","background":"#EBAD1C10","borderRadius":"100px","padding":"0 16px"}}},"theme":"light"}"
                  data-testid="mock-antd-plots"
                />
              </section>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/ProjectOverview/ProjectScore render score between 60-80 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-hoverable css-121p60i"
    >
      <div
        class="ant-card-body"
      >
        <header
          class="card-header"
        >
          <div
            class="title"
          >
            <div
              class="title-cont"
            >
              项目评分
            </div>
          </div>
          <div
            class="extra"
          />
        </header>
        <section
          class="card-cont"
        >
          <div
            class="chart-wrapper css-1hgbe7b"
          >
            <div
              class="chart-box"
            >
              <section
                class="css-v04253"
              >
                <div
                  class="line-block"
                  hidden=""
                  style="background: none;"
                />
                <div
                  class="line-cont"
                >
                  <div
                    class="line1-main"
                  >
                    70
                    <span
                      class="sub-cont"
                      hidden=""
                    />
                  </div>
                  <div
                    class="line1-main-sub"
                  >
                    最新评分
                    <span
                      class="sub-cont"
                      hidden=""
                    />
                  </div>
                </div>
              </section>
              <section
                style="height: 200px;"
              >
                <div
                  data-custom-params="{"percent":0.7,"range":{"color":"#6094FC","width":20},"autoFit":true,"appendPadding":[10,0,40,0],"radius":0.9,"innerRadius":0.8,"startAngle":15,"endAngle":0.7,"indicator":{"pointer":{"style":{"stroke":"#c3c6cd","lineWidth":3}},"pin":{"style":{"r":6,"fill":"#fcfbf9","lineWidth":3,"stroke":"#c3c6cd"}}},"axis":false,"statistic":{"content":{"offsetY":20,"style":{"height":"28px","lineHeight":28,"fontWeight":300,"fontSize":"13px","color":"#6094FC","background":"#6094FC10","borderRadius":"100px","padding":"0 16px"}}},"theme":"light"}"
                  data-testid="mock-antd-plots"
                />
              </section>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/ProjectOverview/ProjectScore render score less than 40 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-hoverable css-121p60i"
    >
      <div
        class="ant-card-body"
      >
        <header
          class="card-header"
        >
          <div
            class="title"
          >
            <div
              class="title-cont"
            >
              项目评分
            </div>
          </div>
          <div
            class="extra"
          />
        </header>
        <section
          class="card-cont"
        >
          <div
            class="chart-wrapper css-1hgbe7b"
          >
            <div
              class="chart-box"
            >
              <section
                class="css-v04253"
              >
                <div
                  class="line-block"
                  hidden=""
                  style="background: none;"
                />
                <div
                  class="line-cont"
                >
                  <div
                    class="line1-main"
                  >
                    30
                    <span
                      class="sub-cont"
                      hidden=""
                    />
                  </div>
                  <div
                    class="line1-main-sub"
                  >
                    最新评分
                    <span
                      class="sub-cont"
                      hidden=""
                    />
                  </div>
                </div>
              </section>
              <section
                style="height: 200px;"
              >
                <div
                  data-custom-params="{"percent":0.3,"range":{"color":"#F66074","width":20},"autoFit":true,"appendPadding":[10,0,40,0],"radius":0.9,"innerRadius":0.8,"startAngle":15,"endAngle":0.7,"indicator":{"pointer":{"style":{"stroke":"#c3c6cd","lineWidth":3}},"pin":{"style":{"r":6,"fill":"#fcfbf9","lineWidth":3,"stroke":"#c3c6cd"}}},"axis":false,"statistic":{"content":{"offsetY":20,"style":{"height":"28px","lineHeight":28,"fontWeight":300,"fontSize":"13px","color":"#F66074","background":"#F6607410","borderRadius":"100px","padding":"0 16px"}}},"theme":"light"}"
                  data-testid="mock-antd-plots"
                />
              </section>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;
